[package]
name = "cfip"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
clap = { version = "4", features = ["derive"] }
ipnetwork = "0.20"
anyhow = "1"
indicatif = "0.17"
comfy-table = "7"
colored = "2"
csv = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
